# serinv-utils

./: .gitignore  README.md  get_difference.py  pyproject.toml
flops/: flops.py  scpobaf_flops.py  scpobasi_flops.py  scpobbaf_flops.py  scpobbasi_flops.py
jobs/alex/: run_operations.sh  run_pobta.sh  run_scpoba.sh  run_scpobba.sh  run_scpobba_blocks.sh
jobs/fritz/: run_compare.sh  run_operations.sh  run_pobtasi.sh  run_scpobasi.sh  run_scpobba.sh  run_scpobba_blocks.sh
plotting/: const.py  plot_banded.py  plot_operations.py  plot_scpobb_blocks.py  plot_scpobb_blocks_increase.py  plot_scpobb_blocks_speedup.py  plot_tables.py  plot_theory_runtime.py  plot_theory_runtime_blocks.py
scaling/: scaling_operations.py  scaling_pobtaf.py  scaling_pobtasi.py  scaling_scpobaf.py  scaling_scpobasi.py  scaling_scpobbaf.py  scaling_scpobbasi.py
scaling/flops/: const.py  flops.py  scpobaf_flops.py  scpobasi_flops.py  scpobbaf_flops.py  scpobbasi_flops.py
scaling/storage/: parameters.py  utils_ba.py  utils_bba.py  utils_bta.py
src/serinv_utils/: config.py
src/serinv_utils/flops/: const.py  flops.py  scpobaf_flops.py  scpobasi_flops.py
src/serinv_utils/plotting/: const.py  plot_banded.py  plot_operations.py  plot_scpobb_blocks.py  plot_scpobb_blocks_speedup.py  plot_tables.py  plot_theory_runtime.py  plot_theory_runtime_blocks.py
src/serinv_utils/scaling/: scaling_operations.py  scaling_pobtasi.py  scaling_scpobasi.py  scaling_scpobbasi.py
src/serinv_utils/storage/: utils_ba.py  utils_bba.py  utils_bta.py
storage/: parameters.py  utils_ba.py
(+20 files in other folders)
